WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216163
REGRESSION(macOS Big Sur)
https://magenta.github.io/lofi-player/
is broken
https://bugs.webkit.org/show_bug.cgi?id=216163
Summary
REGRESSION(macOS Big Sur) https://magenta.github.io/lofi-player/ is broken
Chris Dumez
Reported
2020-09-03 19:07:21 PDT
https://magenta.github.io/lofi-player/
is broken on macOS Big Sur unless you enable the Modern Web Audio experimental feature.
Attachments
Patch
(7.27 KB, patch)
2020-09-03 19:29 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(7.97 KB, patch)
2020-09-04 08:35 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-09-03 19:07:35 PDT
<
rdar://problem/68198173
>
Chris Dumez
Comment 2
2020-09-03 19:29:33 PDT
Created
attachment 407939
[details]
Patch
Eric Carlson
Comment 3
2020-09-03 20:25:11 PDT
Comment on
attachment 407939
[details]
Patch r=me once the bots are happy
Chris Dumez
Comment 4
2020-09-04 08:35:24 PDT
Created
attachment 407978
[details]
Patch
EWS
Comment 5
2020-09-04 10:00:47 PDT
Committed
r266616
: <
https://trac.webkit.org/changeset/266616
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407978
[details]
.
Chris Dumez
Comment 6
2020-09-22 15:47:53 PDT
***
Bug 216814
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug